--- a/package.json
+++ b/package.json
@@ -7,12 +7,16 @@
     "start": "astro dev",
     "build": "astro check && astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "deploy": "bun run build && vercel deploy --prebuilt",
+    "studio": "drizzle-kit studio"
   },
   "dependencies": {
     "@astrojs/check": "^0.9.2",
+    "@astrojs/db": "^0.12.0",
     "@astrojs/react": "^3.6.1",
     "@astrojs/tailwind": "^5.1.0",
+    "@astrojs/vercel": "^7.7.2",
     "@fontsource/poppins": "^5.0.14",
     "@nanostores/react": "^0.7.3",
     "@radix-ui/react-checkbox": "^1.1.1",
@@ -25,13 +29,21 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "input-otp": "^1.2.4",
+    "lucia": "^3.2.0",
+    "lucia-adapter-astrodb": "^0.0.9",
     "lucide-react": "^0.427.0",
+    "nanoid": "^5.0.7",
     "nanostores": "^0.11.2",
+    "oslo": "^1.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "tailwind-merge": "^2.4.0",
     "tailwindcss": "^3.4.9",
     "tailwindcss-animate": "^1.0.7",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "drizzle-kit": "^0.24.0",
+    "drizzle-orm": "^0.33.0"
   }
 }
